[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ingame/object_sprites/rat/rat_walk-1.png" type="Texture" id=1]
[ext_resource path="res://assets/ingame/object_sprites/rat/rat_walk-2.png" type="Texture" id=2]
[ext_resource path="res://assets/ingame/object_sprites/rat/rat_idle.png" type="Texture" id=3]
[ext_resource path="res://rat.gd" type="Script" id=4]
[ext_resource path="res://assets/ingame/object_sprites/rat/rat_death.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.5, 4.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 7 )

[node name="rat" type="KinematicBody2D"]
scale = Vector2( 1.1, 1.1 )
script = ExtResource( 4 )

[node name="animation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "death"

[node name="template" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 2.5 )
shape = SubResource( 3 )

[node name="collider" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="collider"]
position = Vector2( -0.5, 0 )
shape = SubResource( 2 )

[node name="rat_timer" type="Timer" parent="."]

[node name="sfx" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="collider" to="." method="_on_collider_area_entered"]
[connection signal="timeout" from="rat_timer" to="." method="_on_rat_timer_timeout"]
